--- a/lec2/slide-02-01.tex
+++ b/lec2/slide-02-01.tex
@@ -53,11 +53,13 @@
 			\Large
 			Why OS Architecture \& Structure ?
 			\begin{itemize}
-				\item for user
+				\item for user/developer
 				\begin{itemize}\large
 					\item should be convenient to use, easy to learn, reliable, and fast，etc.
 				\end{itemize}
-				\item for system
+			
+				\pause
+				\item for system architect/developer
 				\begin{itemize}\large
 					\item should be easy to design, implement, and maintain
 					\item flexible, reliable, error-free, and efficient
