--- a/lec2/slide-02-02.tex
+++ b/lec2/slide-02-02.tex
@@ -91,6 +91,34 @@
 	
 \end{frame}
 
+
+%-------------------------------------------------
+\begin{frame}[plain,t]
+	\frametitle{history}
+			\centering
+	\LARGE Multics onGE645
+	\begin{columns}
+	
+	\begin{column}{.5\textwidth}
+
+		\includegraphics[width=1.\textwidth]{multics-ge645}
+%		\includegraphics[width=1.\textwidth]{multics}
+		
+		
+		
+	\end{column}
+	
+	\begin{column}{.5\textwidth}
+		
+
+		
+	\includegraphics[width=1.\textwidth]{multics-ge645-2}		
+	\end{column}
+	
+	
+\end{columns}
+	
+\end{frame}
 %-------------------------------------------------
 \begin{frame}[plain]
 	\frametitle{History}
@@ -172,7 +200,7 @@
 			\Large
 			Addressing
 			\begin{itemize}
-				\item  Multics uses a	“Generalized Address”
+				\item  Multics uses a Generalized Address
 				\item  It is calculated
 				differently depending
 				on if the CPU is
@@ -214,7 +242,7 @@
 			\Large
 			Addressing
 			\begin{itemize}
-				\item  Multics uses a “Generalized Address”
+				\item  Multics uses a Generalized Address
 				\item  It is calculated
 				differently depending
 				on if the CPU is
@@ -235,7 +263,7 @@
 %-------------------------------------------------
 
 
-
+%荷兰计算机科学家埃德斯加·狄克斯特拉(Edsgar Wybe Dijkstra)
 %-------------------------------------------------
 \begin{frame}[plain]
 	\frametitle{History}
@@ -256,7 +284,7 @@
 		\begin{column}{.6\textwidth}
 			
 %			\large
-			The Structure of the “The” - Multiprogramming System
+			THE Structure of the “THE” - Multiprogramming System
 			\begin{itemize}
 				\item May, 1968
 				
@@ -332,48 +360,48 @@
 \end{frame}
 
 %-------------------------------------------------
-
-
-\begin{frame}[plain]
-	\frametitle{History}
-	
-	
-	
-	\begin{columns}
-		
-		\begin{column}{.4\textwidth}
-			\centering
-			\includegraphics[width=.3\textwidth]{EWD}
-			\includegraphics[width=1.\textwidth]{elx8}
-			
-			
-			
-		\end{column}
-		
-		\begin{column}{.6\textwidth}
-			
-			%			\large
-			The Structure of the “The” - Multiprogramming System
-			\begin{itemize}
-				\item Contributions
-				\begin{itemize}
-					\item System Hierarchy					
-					\item Storage Allocation
-					\item Processor Allocation
-
-					\item Semaphores
-					
-				\end{itemize}
-				
-			\end{itemize}	
-			
-		\end{column}
-		
-		
-	\end{columns}
-	
-	
-\end{frame}
+%
+%
+%\begin{frame}[plain]
+%	\frametitle{History}
+%	
+%	
+%	
+%	\begin{columns}
+%		
+%		\begin{column}{.4\textwidth}
+%			\centering
+%			\includegraphics[width=.3\textwidth]{EWD}
+%			\includegraphics[width=1.\textwidth]{elx8}
+%			
+%			
+%			
+%		\end{column}
+%		
+%		\begin{column}{.6\textwidth}
+%			
+%			%			\large
+%			THE Structure of the “THE” - Multiprogramming System
+%			\begin{itemize}
+%				\item Contributions
+%				\begin{itemize}
+%					\item System Hierarchy					
+%					\item Storage Allocation
+%					\item Processor Allocation
+%
+%					\item Semaphores
+%					
+%				\end{itemize}
+%				
+%			\end{itemize}	
+%			
+%		\end{column}
+%		
+%		
+%	\end{columns}
+%	
+%	
+%\end{frame}
 
 
 
@@ -397,7 +425,7 @@
 		\begin{column}{.6\textwidth}
 			
 			%			\large
-			The Structure of the “The” - Multiprogramming System
+			THE Structure of the “THE” - Multiprogramming System
 			\begin{itemize}
 				\item Goal
 				\begin{itemize}
@@ -438,11 +466,11 @@
 		\begin{column}{.6\textwidth}
 			
 			%			\large
-			The Structure of the “The” - Multiprogramming System
+			THE Structure of the “THE” - Multiprogramming System
 			\begin{itemize}
-				\item Challenge : Multiprogramming
+
 				\item Challenge : Complex softwares v.s. puny hardware
-				
+				\item Challenge : Multiprogramming				
 			\end{itemize}	
 			
 		\end{column}
@@ -474,12 +502,12 @@
 		\begin{column}{.6\textwidth}
 			
 			%			\large
-			The Structure of the “The” - Multiprogramming System
+			THE Structure of the “THE” - Multiprogramming System
 			\begin{itemize}
 				\item Solution : Layered Structure
 				
 				\begin{itemize}
-					\item Virtualized i/o streams
+					\item Virtualized I/O streams
 					\item Private console
 					\item One huge/unlimited memory space
 					\item One processor, manage interrupt
@@ -516,12 +544,12 @@
 		\begin{column}{.6\textwidth}
 			
 			%			\large
-			The Structure of the “The” - Multiprogramming System
+			The Structure of the “THE” - Multiprogramming System
 			\begin{itemize}
 				\item Solution : Semaphore
 				
 				\begin{itemize}
-					\item The OS requires synchronization
+					\item THE OS requires synchronization
 
 				\end{itemize}
 				
@@ -556,7 +584,7 @@
 		\begin{column}{.6\textwidth}
 			
 			%			\large
-			The Structure of the “The” - Multiprogramming System
+			The Structure of the “THE” - Multiprogramming System
 			\begin{itemize}
 				\item Future : verification
 				
