--- a/lec2/slide-02-04.tex
+++ b/lec2/slide-02-04.tex
@@ -124,6 +124,11 @@
 %-------------------------------------------------
 \begin{frame}[plain]
 	\frametitle{Microkernel-- Mach}
+
+Mach Developed  at CMU
+Led by Rick Rashid, Founded Microsoft Research
+Initial  release: 1985
+
 	
 %Task: unit of execution consisting of an address space, ports, and threads.
 %Thread: basic unit of execution, shares address space, ports with other threads in task.
@@ -301,6 +306,28 @@
 	
 	\centering
 	\includegraphics[width=1.\textwidth]{l4-family}
+	
+\end{frame}
+
+
+
+%https://ucbrise.github.io/cs262a-spring2018/notes/18-microkerenels-Mach-seL4.pdf
+%-------------------------------------------------
+\begin{frame}[plain]
+	\frametitle{L4 family}
+	
+	\centering
+	\includegraphics[width=.8\textwidth]{l4-ipc-perf}
+	
+\end{frame}
+
+%https://ucbrise.github.io/cs262a-spring2018/notes/18-microkerenels-Mach-seL4.pdf
+%-------------------------------------------------
+\begin{frame}[plain]
+	\frametitle{L4 family}
+	
+	\centering
+	\includegraphics[width=.8\textwidth]{l4-src-code}
 	
 \end{frame}
 %-------------------------------------------------
