--- a/lec4/slide-04-01.tex
+++ b/lec4/slide-04-01.tex
@@ -130,7 +130,7 @@
 			
 			\tiny from: An Updated Performance Comparison of Virtual Machines	and Linux Containers,TR of IBM, 2014
 			
-			\tiny from: My VM is Lighter (and Safer) than your Container and Linux Containers,SOSO'17, 2017
+			\tiny from: My VM is Lighter (and Safer) than your Container and Linux Containers,SOSP'17, 2017
 		\end{column}
 		
 		
@@ -212,7 +212,7 @@
 				\item Program Binaries/configuration
 				\item Runtime libraries
 				\item Dependency Products/tools
-				\item A Piece of Kernal
+				\item A Piece of Kernel
 				\item System Resources: CPU/MEM/IO/Net/Storage
 				
 			\end{itemize}	
